# api-site

./: .gitignore  .gitreview  .zuul.yaml  README  README.rst  bindep.txt  doc-test-exceptions.txt  doc-test.conf  doc-tools-check-languages.conf  other-requirements.txt  pom.xml  test-requirements.txt  tox.ini  {
api-guide/: pom.xml  (+5 more)
api-quick-start/: pom.xml  setup.cfg
api-quick-start/locale/: am_ET.po  api-quick-start.pot  ar.po  bg_BG.po  bn_IN.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  en_US.po  es.po  es_MX.po  eu.po  fa.po  fi_FI.po  fil.po  fr.po  gl.po  he.po  he_IL.po  hi.po  hr.po  hu.po  id.po  is_IS.po  it.po  it_IT.po  ja.po  ka_GE.po  km.po  kn.po  ko_KR.po  ml_IN.po  mr_IN.po  ms.po  nb.po  (+24 more)
api-quick-start/source/: api-quick-start.rst  conf.py  index.rst
api-quick-start/source/locale/: api-quick-start.pot  es.po  ja.po  ko_KR.po  pt_BR.po  zh_CN.po
api-quick-start/source/locale/de/LC_MESSAGES/: api-quick-start.po
api-quick-start/source/locale/en_GB/LC_MESSAGES/: api-quick-start.po
api-quick-start/source/locale/eo/LC_MESSAGES/: api-quick-start.po
api-quick-start/source/locale/fi_FI/LC_MESSAGES/: api-quick-start.po
api-quick-start/src/docbkx/: api-quick-start-intro.xml  api-quick-start-onepager.xml  cli-uses.xml  endpoints-list-resp.json  flavors-post-resp.json  get_credentials_resp.json  images-post-resp.json  servers-post-resp.json  tenants_list_resp.json
firstapp/: README.rst  setup.cfg
firstapp/samples/dotnet/: getting_started.cs
firstapp/samples/fog/: block_storage.rb  durability.rb  getting_started.rb  introduction.rb  scaling_out.rb
firstapp/samples/gophercloud/: block_storage.go  durability.go  getting_started.go
firstapp/samples/heat/: faafo_autoscaling_workers.yaml  hello_faafo.yaml
firstapp/samples/jclouds/: BlockStorage.java  Durability.java  GettingStarted.java  Introduction.java  ScalingOut.java  pom.xml
firstapp/samples/libcloud/: block_storage.py  durability.py  getting_started.py  introduction.py  scaling_out.py  section3.py
firstapp/samples/openstacksdk/: getting_started.py  introduction.py
firstapp/samples/pkgcloud/: getting_started.js
firstapp/samples/shade/: block_storage.py  clouds.yml  durability.py  getting_started.py  introduction.py  scaling_out.py  shade.yml
firstapp/source/: advice.rst  appendix.rst  block_storage.rst  conf.py  craziness.rst  durability.rst  getting_started.rst  index.rst  introduction.rst  networking.rst  orchestration.rst  scaling_out.rst  section1.rst  section2.rst  section3.rst  section4.rst  section6.rst  section9.rst
firstapp/source/images/: work_queue.dot
firstapp/source/imported/: glossary.rst
firstapp/source/locale/: firstapp.pot
openstack-firstapp/: README.rst  setup.cfg
openstack-firstapp/doc/: Makefile
openstack-firstapp/doc/source/: appendix.rst  conf.py  index.rst  section1.rst  section2.rst  section3.rst  section4.rst  section5.rst  section6.rst  section7.rst  section8.rst  section9.rst
openstack-firstapp/doc/source/images/: architecture.dot
openstack-firstapp/samples/fog/: section1.rb
openstack-firstapp/samples/libcloud/: section1.py  section2.py
(+3294 files in other folders)
